# mono-repo

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: README.md
