[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Paco279", email = "pacoberort@gmail.com" }
]
dependencies = [
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.42",
    "alembic>=1.16.4",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "fastapi>=0.116.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
